--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,13 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="https://firebasestorage.googleapis.com/v0/b/ecommerce-website-7369e.appspot.com/o/store.png?alt=media&token=467f1a85-2c47-4489-bafd-48abefcf4d05" />
+  <link rel="icon" type="image/svg+xml" href="src/assets/logo.svg" />
+  <!-- <link rel="icon" type="image/svg+xml" href="https://firebasestorage.googleapis.com/v0/b/ecommerce-website-7369e.appspot.com/o/store.png?alt=media&token=467f1a85-2c47-4489-bafd-48abefcf4d05" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
   integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
   crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>BAZAAR</title>
+  <title>Bazaar</title>
 </head>
 
 <body>
